--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a-entity id="main-light" light="type: directional; intensity: 1; castShadow: true" position="1 2 1"></a-entity>
         <a-entity light="type: ambient; intensity: 0.5"></a-entity>
 
-        <a-marker preset="hiro" weather-controller cursor="rayOrigin: mouse" raycaster="objects: .clickable">
+        <a-marker type="pattern" url="marker.patt" weather-controller cursor="rayOrigin: mouse" raycaster="objects: .clickable">
             
             <a-cylinder id="base-environment" position="0 0 0" radius="1.5" height="0.1" color="#4CC3D9" opacity="0.9"></a-cylinder>
             <a-cylinder position="0 -0.1 0" radius="1.45" height="0.3" color="#795548"></a-cylinder>
@@ -132,4 +132,5 @@
 
     </a-scene>
 </body>
+
 </html>
